@@ -10,6 +10,8 @@ New Features
 
 * added AlleleFreqs attribute to ensembl Variation objects.
 * added getGeneByStableId method to genome objects.
+* added Introns attribute to Transcript objects and an Intron class. (Thanks
+  to Hua Ying for this patch!)
 
 Changes
 -------
